<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMAR</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="commande">commande</string>
    <string name="primitives">Primitives</string>
    <string name="cube">Cube</string>
    <string name="parallellepippede">Parallelepipede</string>
    <string name="cylindre">Cylindre</string>
    <string name="cone">Cone</string>
    <string name="changebg">Change Background</string>
    <string name="sphere">Sphere</string>
    <string name="save">Save</string>
    <string name="coude">Coude</string>
    <string name="stl">STL</string>
	<string name="prisme">Prisme</string>
	<string name="cancel">Cancel</string>
	<string name="addcube">Add Cube</string>
	<string name="addcone">Add Cone</string>
	<string name="addpara">Add Parallelepipede</string>
	<string name="addcylindre">Add Cylinder</string>
	<string name="addprisme">Add Prisme</string>
	<string name="addcoude">Add Coude</string>
	<string name="axe">Axis :</string>
	<string name="x">X</string>
	<string name="z">Z</string>
	<string name="y">Y</string>
	<string name="x1">X1</string>
	<string name="x2">X2</string>
	<string name="r">R</string>
	<string name="g">G</string>
	<string name="b">B</string>
	<string name="ok">OK</string>
	<string name="nbrpts">Points number</string>
	<string name="vx">Vx</string>
	<string name="vy">Vy</string>
	<string name="vz">Vz</string>
	<string name="discretisation">Discretisation</string>
	<string name="fine">Small</string>
	<string name="medium">Medium</string>
	<string name="big">Big</string>
	<string name="addsphere">Add Sphere</string>
	<string name="type">Type</string>
	<string name="full">Full</string>
	<string name="half">Half</string>
	<string name="righthlaf">Right Half</string>
	<string name="lefthalf">Left Half</string>
	<string name="addmaillon">New Link</string>
	<string name="father">Father Link</string>
	<string name="posx">X position</string>
	<string name="posy">Y position</string>
	<string name="posz">Z position</string>
	<string name="rotx">X rotation</string>
	<string name="roty">Y rotation</string>
	<string name="rotz">Z rotation</string>
	<string name="min">Minimum Value</string>
	<string name="max">Maximum Value</string>
	<string name="jointtype">Joint Type</string>
	<string name="xpivot">X Pivot</string>
	<string name="ypivot">Y Pivot</string>
	<string name="zpivot">Z Pivot</string>
	<string name="xslide">X Slide</string>
	<string name="yslide">Y Slide</string>
	<string name="zslide">Z Slide</string>
	<string name="zero">0</string>
	<string name="mpi">-180</string>
	<string name="pi">180</string>
	<string name="tree">Tree</string>
	<string name="titleessay">Title essay</string>
	<string name="programTitle">SMAR</string>
	<string name="name">File Name</string>
</resources>