<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  
<LinearLayout
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:scrollbars="vertical" >    

     <TextView
         android:id="@+id/conftitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/changebg"
         android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
    android:id="@+id/editR"
    android:layout_width="78dp"
    android:layout_height="wrap_content"
    android:ems="10"
/>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

     <TextView
         android:id="@+id/textViewR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/r"
         android:textAppearance="?android:attr/textAppearanceMedium" />
  
  <SeekBar
      android:id="@+id/seekBarR"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>

<TextView
    android:id="@+id/editG"
    android:layout_width="72dp"
    android:layout_height="wrap_content"
    android:ems="10"
    />
   
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

     <TextView
         android:id="@+id/textViewG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/g"
         android:textAppearance="?android:attr/textAppearanceMedium" />
  
  <SeekBar
      android:id="@+id/seekBarG"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>

   <TextView
       android:id="@+id/editB"
       android:layout_width="84dp"
       android:layout_height="wrap_content"
       android:ems="10"
        />
   
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

     <TextView
         android:id="@+id/textViewB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/b"
         android:textAppearance="?android:attr/textAppearanceMedium" />
  
  <SeekBar
      android:id="@+id/seekBarB"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>

 <SurfaceView
     android:id="@+id/surfaceView1"
     android:layout_width="50dp"
     android:layout_height="50dp"
     android:background="@color/black_overlay" />

 <Button
     android:id="@+id/ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/ok" />
 
</LinearLayout>
</ScrollView>
